--- a/arch/arm64/configs/nx531j_defconfig
+++ b/arch/arm64/configs/nx531j_defconfig
@@ -352,6 +352,7 @@ CONFIG_ZTEMT_FUEL_GAUGE=y
 CONFIG_POWER_RESET_MSM=y
 CONFIG_NUBIA_PANIC_BOOTMODE=y
 CONFIG_MSM_DLOAD_MODE=y
+CONFIG_MSM_PRESERVE_MEM=y
 CONFIG_MSM_PM=y
 CONFIG_APSS_CORE_EA=y
 CONFIG_MSM_APM=y
