nx531j: Preserve memory on restart
Change-Id: I33484ac6a55880241486bf10bd685bcad669af36

--- a/arch/arm64/configs/nx531j_defconfig
+++ b/arch/arm64/configs/nx531j_defconfig
@@ -359,6 +359,7 @@ CONFIG_ZTEMT_FUEL_GAUGE=y
 CONFIG_POWER_RESET_MSM=y
 CONFIG_NUBIA_PANIC_BOOTMODE=y
 CONFIG_MSM_DLOAD_MODE=y
+CONFIG_MSM_PRESERVE_MEM=y
 CONFIG_MSM_PM=y
 CONFIG_MSM_APM=y
 CONFIG_MSM_IDLE_STATS=y
