nx531j: update defconfig

--- a/arch/arm64/configs/msm8996-NX531J-perf_defconfig
+++ b/arch/arm64/configs/msm8996-NX531J-perf_defconfig
@@ -4,6 +4,9 @@ CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_TASKSTATS=y
+CONFIG_TASK_XACCT=y
+CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_IKCONFIG=y
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=15
@@ -236,7 +239,8 @@ CONFIG_PI5U_USBTYPE_C=y
 CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
 CONFIG_HDCP_QSEECOM=y
-CONFIG_UID_CPUTIME=y
+CONFIG_PROFILER=y
+CONFIG_UID_SYS_STATS=y
 CONFIG_TI_DRV2667=y
 CONFIG_EEPROM_AT24=y
 CONFIG_SCSI=y
@@ -282,6 +286,8 @@ CONFIG_CNSS_CRYPTO=y
 CONFIG_ATH_CARDS=y
 CONFIG_WIL6210=m
 CONFIG_CNSS=y
+CONFIG_CNSS_PCI=y
+CONFIG_CNSS_ASYNC=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_BUS_AUTO_SUSPEND=y
 CONFIG_WLAN_FEATURE_RX_WAKELOCK=y
@@ -460,6 +466,7 @@ CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 CONFIG_USB_DWC3=y
 CONFIG_USB_SERIAL=y
 CONFIG_USB_EHSET_TEST_FIXTURE=y
+CONFIG_USB_QTI_KS_BRIDGE=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_USB_MSM_SSPHY_QMP=y
 CONFIG_MSM_QUSB_PHY=y
@@ -502,8 +509,6 @@ CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ANDROID_INTF_ALARM_DEV=y
-CONFIG_ZTEMT_PON_ALARM_DELTA=y
 CONFIG_SW_SYNC_USER=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
