--- a/arch/arm64/configs/nx531j_defconfig
+++ b/arch/arm64/configs/nx531j_defconfig
@@ -634,8 +634,6 @@ CONFIG_TIMER_STATS=y
 CONFIG_IPC_LOGGING=y
 CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 CONFIG_DEBUG_SET_MODULE_RONX=y
-CONFIG_DEBUG_RODATA=y
-CONFIG_DEBUG_ALIGN_RODATA=y
 CONFIG_PFK=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
@@ -665,4 +663,17 @@ CONFIG_ZTEMT_AUDIO=y
 CONFIG_SCHED_DEBUG=n
 CONFIG_HAVE_DEBUG_KMEMLEAK=n
 CONFIG_RMNET_DATA_DEBUG_PKT=n
-CONFIG_NUBIA_CGF_NOTIFY_EVENT=y
+CONFIG_QCA_CLD_WLAN=y
+CONFIG_QCACLD_WLAN_LFR3=y
+CONFIG_PRIMA_WLAN_OKC=y
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+CONFIG_WLAN_FEATURE_11W=y
+CONFIG_WLAN_FEATURE_LPSS=y
+CONFIG_QCOM_VOWIFI_11R=y
+CONFIG_WLAN_FEATURE_NAN=y
+CONFIG_QCOM_TDLS=y
+CONFIG_QCOM_LTE_COEX=y
+CONFIG_WLAN_FEATURE_MEMDUMP=y
+CONFIG_WLAN_OFFLOAD_PACKETS=y
+CONFIG_QCA_WIFI_AUTOMOTIVE_CONC=y
+CONFIG_WLAN_UDP_RESPONSE_OFFLOAD=y
