nx531j: update  defconfig
 * Switch To EAS
 * DYNAMIC_STUNE_BOOST
 * WQ_POWER_EFFICIENT_DEFAULT

--- a/arch/arm64/configs/nx531j_defconfig
+++ b/arch/arm64/configs/nx531j_defconfig
@@ -3,6 +3,7 @@ CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_SCHED_WALT=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
@@ -13,14 +14,18 @@ CONFIG_LOG_CPU_MAX_BUF_SHIFT=15
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
+CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
+CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
-CONFIG_SCHED_HMP=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
+CONFIG_SCHED_TUNE=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
+CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_BZIP2=y
@@ -41,10 +46,10 @@ CONFIG_CGROUP_BFQIO=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8996=y
 CONFIG_MACH_NUBIA_NX531J=y
+CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_PCI_MSM=y
 CONFIG_ENABLE_FP_SIMD_SETTINGS=y
 CONFIG_MSM_APP_SETTINGS=y
-CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=4
 CONFIG_PREEMPT=y
@@ -62,16 +67,18 @@ CONFIG_COMPAT=y
 CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_PM_RUNTIME=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
-CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SCHED=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_BOOST=y
 CONFIG_NET=y
 CONFIG_PACKET=y
@@ -347,8 +354,12 @@ CONFIG_POWER_RESET_MSM=y
 CONFIG_NUBIA_PANIC_BOOTMODE=y
 CONFIG_MSM_DLOAD_MODE=y
 CONFIG_MSM_PM=y
-CONFIG_APSS_CORE_EA=y
 CONFIG_MSM_APM=y
+CONFIG_MSM_IDLE_STATS=y
+CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
+CONFIG_MSM_IDLE_STATS_BUCKET_SHIFT=2
+CONFIG_MSM_IDLE_STATS_BUCKET_COUNT=10
+CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
 CONFIG_SENSORS_EPM_ADC=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_SENSORS_QPNP_ADC_CURRENT=y
@@ -562,6 +573,8 @@ CONFIG_MSM_PIL_SSR_GENERIC=y
 CONFIG_MSM_PIL_MSS_QDSP6V5=y
 CONFIG_TRACER_PKT=y
 CONFIG_MSM_PERFORMANCE=y
+# CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
+CONFIG_MSM_PERFORMANCE_CPUFREQ_LIMITS_VOTING_ONLY=y
 CONFIG_MSM_POWER=y
 CONFIG_MSM_QBT1000=y
 CONFIG_MSM_KERNEL_PROTECT=y
