nx531j: update ramoops

--- a/arch/arm/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996.dtsi
@@ -271,10 +271,10 @@
 		};
 
 
-		ramoops_mem: ramoops_region@92900000 {
+		ramoops_mem: ramoops_region@ac000000 {
 			compatible = "removed-dma-pool";
 			no-map;
-			reg = <0x0 0x92900000 0x0 0x00100000>;
+			reg = <0 0xAC000000 0 0x200000>;
 		};
 	};
 };
@@ -3419,16 +3419,10 @@
 
 	ramoops {
 		compatible = "ramoops";
-		status = "ok";
-
-		android,ramoops-buffer-start = <0x92900000>;
-		android,ramoops-buffer-size = <0x00100000>;
-		android,ramoops-console-size = <0x00080000>;
-		android,ramoops-pmsg-size = <0x00040000>;
-		android,ramoops-record-size = <0x00008000>;
-		android,ramoops-ftrace-size = <0x00020000>;
-		android,ramoops-dump-oops = <0x1>;
-		linux,contiguous-region = <&ramoops_mem>;
+		memory-region = <&ramoops_mem>;
+		record-size = <0x0 0x20000>;
+		console-size = <0x0 0x100000>;
+		pmsg-size = <0x0 0x80000>;
 	};
 
 	qcom,msm-dai-mi2s {
